Add background image in header

--- a/index.html
+++ b/index.html
@@ -10,13 +10,39 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <header>
-            <nav>
-
+        <header class="splash"> 
+            <nav class="navigation">
+                <div class="container">
+                    <div class="logo">
+                        <img src="">
+                    </div>
+                    <div class="nav-list">
+                        <ul>
+                            <li>
+                                <a href="#">home</a>
+                            </li>
+                            <li>
+                                <a href="#">services</a>
+                            </li>
+                            <li>
+                                <a href="#">portfolio</a>
+                            </li>
+                            <li>
+                                <a href="#">about</a>
+                            </li>
+                            <li>
+                                <a href="#">contact</a>
+                            </li>
+                            
+                        </ul>
+                    </div>
+                </div>
             </nav>
-                <h1>Welcome To Our Studio</h1>
-                <h2>it's nice to meet you</h2>
-                <a href="#">tell me more</a>
+                <div class="splash-inner">
+                    <h1>Welcome To Our Studio</h1>
+                    <h2>it's nice to meet you</h2>
+                    <a href="#">tell me more</a>
+                </div>
         </header>
 
         <section class="services">
