Add icons to footer

--- a/index.html
+++ b/index.html
@@ -132,7 +132,13 @@
         </section>
 
         <footer>
-            &copy; Copyright 2014 FreebiesXpress.com
+            <p>&copy; Copyright 2014 FreebiesXpress.com</p>
+            <ul>
+                <li><a href="#"><i class="fab fa-twitter-square"></i>Twitter</a></li>
+                <li><a href="#"><i class="fab fa-facebook-f"></i>Facebook</a></li>
+                <li><a href="#"><i class="fab fa-pinterest"></i>Pinterest</a></li>
+                <li><a href="#"><i class="fab fa-google-plus"></i>Google Plus</a></li>
+            </ul>
         </footer>
 
     </body>
