Add styles for navigation and header, add icons for services

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Project5</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Noto+Serif+Display:ital@1&family=Roboto+Slab&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Lily+Script+One&family=Montserrat:wght@400;700&family=Noto+Serif:ital@1&family=Roboto+Slab&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.1/css/bootstrap.min.css" integrity="sha384-VCmXjywReHh4PwowAiWNagnWcLhlEJLA5buUprzK8rxFgeH0kww/aWY76TfkUoSX" crossorigin="anonymous">
         <link rel="stylesheet" href="css/style.css">
@@ -14,7 +14,7 @@
             <nav class="navigation">
                 <div class="container">
                     <div class="logo">
-                        <img src="">
+                        <p>Golden</p>
                     </div>
                     <div class="nav-list">
                         <ul>
@@ -33,15 +33,14 @@
                             <li>
                                 <a href="#">contact</a>
                             </li>
-                            
                         </ul>
                     </div>
                 </div>
             </nav>
                 <div class="splash-inner">
-                    <h1>Welcome To Our Studio</h1>
+                    <h1>Welcome To Our Studio!</h1>
                     <h2>it's nice to meet you</h2>
-                    <a href="#">tell me more</a>
+                    <a href="#" class="btn">tell me more</a>
                 </div>
         </header>
 
@@ -131,13 +130,13 @@
             </div>
         </section>
 
-        <footer>
+        <footer class="footer">
             <p>&copy; Copyright 2014 FreebiesXpress.com</p>
             <ul>
-                <li><a href="#"><i class="fab fa-twitter-square"></i>Twitter</a></li>
+                <li><a href="#"><i class="fab fa-twitter"></i>Twitter</a></li>
                 <li><a href="#"><i class="fab fa-facebook-f"></i>Facebook</a></li>
-                <li><a href="#"><i class="fab fa-pinterest"></i>Pinterest</a></li>
-                <li><a href="#"><i class="fab fa-google-plus"></i>Google Plus</a></li>
+                <li><a href="#"><i class="fab fa-pinterest-p"></i>Pinterest</a></li>
+                <li><a href="#"><i class="fab fa-google-plus-g"></i>Google Plus</a></li>
             </ul>
         </footer>
 
