--- a/index.html
+++ b/index.html
@@ -50,14 +50,23 @@
                 <h4>Proin iaculis purus consequat sem cure.</h4>
                 <div class="row">
                     <div class="col-4">
+                        <div class="services-icon">
+                            <img src="images/e-commerce-icon.png">
+                        </div>
                         <h5>E-Commerce</h5>
                         <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>
                     </div>
                     <div class="col-4">
+                        <div class="services-icon">
+                            <img src="images/responsive-web-icon.png">
+                        </div>
                         <h5>Responsive Web</h5>
                         <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>
                     </div>
                     <div class="col-4">
+                        <div class="services-icon">
+                            <img src="images/web-security-icon.png">
+                        </div>
                         <h5>Web Security</h5>
                         <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>
                     </div>
