Add styles to portfolio section

--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
 
         <section class="portfolio">
             <div class="container">
+                <h3>our portfolio</h3>
+                <h4>Proin iaculis purus consequat sem cure.</h4>
                 <div class="row">
                     <div class="col-4">
                         <div class="card">
-                            <div class="card-image">
-                                <img src="images/Image.png">
-                            </div>
+                            <img src="images/Image.png">
                             <div class="card-body">
                                 <h5>Ebony & Ivory</h5>
                                 <p>Branding</p>
@@ -90,49 +90,49 @@
                     </div>
                     <div class="col-4">
                         <div class="card">
-                            <div class="card-image">
-                                <img src="images/Image2.png">
+                            <img src="images/Image2.png">
+                            <div class="card-body">
+                                <h5>Smart Stationary</h5>
+                                <p>Print Design</p>
                             </div>
-                            <h5>Smart Stationary</h5>
-                            <p>Print Design</p>
                         </div>
                     </div>
                     <div class="col-4">
                         <div class="card">
-                            <div class="card-image">
-                                <img src="images/Image3.png">
+                            <img src="images/Image3.png">
+                            <div class="card-body">
+                                <h5>Clever Poster</h5>
+                                <p>Print Design</p>
                             </div>
-                            <h5>Clever Poster</h5>
-                            <p>Print Design</p>
                         </div>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-4">
                         <div class="card">
-                            <div class="card-image">
-                                <img src="images/Image4.png">
+                            <img src="images/Image4.png">
+                            <div class="card-body">
+                                <h5>Vinyl Record</h5>
+                                <p>Product Mock-Up</p>
                             </div>
-                            <h5>Vinyl Record</h5>
-                            <p>Product Mock-Up</p>
                         </div>
                     </div>
                     <div class="col-4">
                         <div class="card">
-                            <div class="card-image">
-                                <img src="images/Image5.png">
+                            <img src="images/Image5.png">
+                            <div class="card-body">
+                                <h5>Treehouse Template</h5>
+                                <p>Web Design</p>
                             </div>
-                            <h5>Treehouse Template</h5>
-                            <p>Web Design</p>
                         </div>
                     </div>
                     <div class="col-4">
                         <div class="card">
-                            <div class="card-image">
-                                <img src="images/Image6.png">
+                            <img src="images/Image6.png">
+                            <div class="card-body">
+                                <h5>Burned Logo</h5>
+                                <p>Branding</p>
                             </div>
-                            <h5>Burned Logo</h5>
-                            <p>Branding</p>
                         </div>
                     </div>
                 </div>
