--- a/index.html
+++ b/index.html
@@ -140,13 +140,21 @@
         </section>
 
         <footer class="footer">
-            <p>&copy; Copyright 2014 FreebiesXpress.com</p>
-            <ul>
-                <li><a href="#"><i class="fab fa-twitter"></i>Twitter</a></li>
-                <li><a href="#"><i class="fab fa-facebook-f"></i>Facebook</a></li>
-                <li><a href="#"><i class="fab fa-pinterest-p"></i>Pinterest</a></li>
-                <li><a href="#"><i class="fab fa-google-plus-g"></i>Google Plus</a></li>
-            </ul>
+            <div class="container">
+                <div class="row">
+                    <div class="col-5">
+                        <p>&copy; Copyright 2014 FreebiesXpress.com</p>
+                    </div>
+                    <div class="col-7">
+                        <ul>
+                            <li><a href="#"><i class="fab fa-twitter"></i>Twitter</a></li>
+                            <li><a href="#"><i class="fab fa-facebook-f"></i>Facebook</a></li>
+                            <li><a href="#"><i class="fab fa-pinterest-p"></i>Pinterest</a></li>
+                            <li><a href="#"><i class="fab fa-google-plus-g"></i>Google Plus</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </footer>
 
     </body>
