Adjust content to mobile phones and tablets

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
         <header class="splash"> 
             <nav class="navigation">
-                <div class="container">
+                <div class="container pt-3">
                     <div class="logo">
                         <p>Golden</p>
                     </div>
@@ -45,25 +45,25 @@
         </header>
 
         <section class="services">
-            <div class="container">
+            <div class="container py-5">
                 <h3>Services</h3>
                 <h4>Proin iaculis purus consequat sem cure.</h4>
-                <div class="row">
-                    <div class="col-4">
+                <div class="row mt-5">
+                    <div class="col-12 col-md-4">
                         <div class="services-icon">
                             <img src="images/e-commerce-icon.png">
                         </div>
                         <h5>E-Commerce</h5>
                         <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>
                     </div>
-                    <div class="col-4">
+                    <div class="col-12 col-md-4">
                         <div class="services-icon">
                             <img src="images/responsive-web-icon.png">
                         </div>
                         <h5>Responsive Web</h5>
                         <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>
                     </div>
-                    <div class="col-4">
+                    <div class="col-12 col-md-4">
                         <div class="services-icon">
                             <img src="images/web-security-icon.png">
                         </div>
@@ -74,12 +74,12 @@
             </div>
         </section>
 
-        <section class="portfolio">
-            <div class="container">
+        <section class="portfolio p-3">
+            <div class="container py-5">
                 <h3>our portfolio</h3>
                 <h4>Proin iaculis purus consequat sem cure.</h4>
-                <div class="row">
-                    <div class="col-4">
+                <div class="row mt-5">
+                    <div class="col-12 col-lg-4">
                         <div class="card">
                             <img src="images/Image.png">
                             <div class="card-body">
@@ -88,7 +88,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-4">
+                    <div class="col-12 col-lg-4">
                         <div class="card">
                             <img src="images/Image2.png">
                             <div class="card-body">
@@ -97,7 +97,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-4">
+                    <div class="col-12 col-lg-4">
                         <div class="card">
                             <img src="images/Image3.png">
                             <div class="card-body">
@@ -107,8 +107,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-4">
+                <div class="row card-deck">
+                    <div class="col-12 col-lg-4">
                         <div class="card">
                             <img src="images/Image4.png">
                             <div class="card-body">
@@ -117,7 +117,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-4">
+                    <div class="col-12 col-lg-4">
                         <div class="card">
                             <img src="images/Image5.png">
                             <div class="card-body">
@@ -126,7 +126,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-4">
+                    <div class="col-12 col-lg-4">
                         <div class="card">
                             <img src="images/Image6.png">
                             <div class="card-body">
@@ -139,20 +139,18 @@
             </div>
         </section>
 
-        <footer class="footer">
-            <div class="container">
-                <div class="row">
-                    <div class="col-5">
-                        <p>&copy; Copyright 2014 FreebiesXpress.com</p>
-                    </div>
-                    <div class="col-7">
-                        <ul>
-                            <li><a href="#"><i class="fab fa-twitter"></i>Twitter</a></li>
-                            <li><a href="#"><i class="fab fa-facebook-f"></i>Facebook</a></li>
-                            <li><a href="#"><i class="fab fa-pinterest-p"></i>Pinterest</a></li>
-                            <li><a href="#"><i class="fab fa-google-plus-g"></i>Google Plus</a></li>
-                        </ul>
-                    </div>
+        <footer class="footer p-4 ml-5">
+            <div class="row justify-content-between"">
+                <div class="col-12 col-sm-5">
+                    <p>&copy; Copyright 2014 FreebiesXpress.com</p>
+                </div>
+                <div class=" col-12 col-sm-7">
+                    <ul>
+                        <li><a href="#"><i class="fab fa-twitter"></i>Twitter</a></li>
+                        <li><a href="#"><i class="fab fa-facebook-f"></i>Facebook</a></li>
+                        <li><a href="#"><i class="fab fa-pinterest-p"></i>Pinterest</a></li>
+                        <li><a href="#"><i class="fab fa-google-plus-g"></i>Google Plus</a></li>
+                    </ul>
                 </div>
             </div>
         </footer>
